--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "PizzaPoint-Admin-Panel-APIs",
+  "name": "pizzapoint",
   "version": "1.0.0",
-  "description": "",
+  "description": "restful apis for android app and backend panel",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js"
+    "start": "node server.js"
   },
   "author": "Sunny Singh",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "fcm-push": "^1.1.3",
-    "mysql": "^2.16.0",
-    "randomstring": "^1.1.5"
+    "jsonwebtoken": "^8.3.0",
+    "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
+    "randomstring": "^1.1.5",
+    "supervisor": "^0.12.0"
+  },
+  "engines": {
+    "node": "8.9.3",
+    "npm": "5.6.0"
   }
 }
